--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "joi": "^17.7.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.8.3",
+    "passport": "^0.6.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
