--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
