--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
