--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
+    "less": "^4.1.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.1"
   },
