--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "less": "^4.1.3",
+    "md-editor-v3": "^2.7.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
@@ -25,6 +26,7 @@
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.1.1"
   },
   "devDependencies": {
