--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -21,6 +22,8 @@
     "md-editor-v3": "^2.7.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
     "vue": "^3.2.45",
