--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "less": "^4.1.3",
-    "md-editor-v3": "^2.7.2",
+    "md-editor-v3": "^2.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^7.1.2",
+    "vditor": "^3.9.1",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
